rcman-derive/tests/ui/fail/missing_category.stderr
error: Category is required. Add #[schema(category = "name")] to the struct or #[setting(category = "name")] to this field
 --> tests/ui/fail/missing_category.rs:6:5
  |
6 |     pub port: u16,
  |     ^^^^^^^^^^^^^

error: Category is required. Add #[schema(category = "name")] to the struct or #[setting(category = "name")] to this field
 --> tests/ui/fail/missing_category.rs:7:5
  |
7 |     pub host: String, // Will trigger a second missing category error!
  |     ^^^^^^^^^^^^^^^^
